# aicodex

./: .gitignore  README.md  build.py  justfile  leagsoft.md  leagsoft1.md  leagsoft_checkpoint_20260514_232253.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dotslash-config.json
.github/scripts/: build-codex-package-archive.sh
.github/workflows/: README.md  bazel.yml  blocking-ci.yml  cargo-deny.yml  ci.yml  codespell.yml  postmerge-ci.yml  rust-ci-full.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  v8-canary.yml
battle-game/: README.md  data.json  package-lock.json  package.json  server.js  server2.js  server_chat_patch.js  start-all.sh  start.sh  test_bots.js
battle-game/public/: index.html
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml  README.md  default.nix
codex-rs/anthropic/: Cargo.toml
codex-rs/anthropic/src/: auth.rs  dto.rs  error.rs  lib.rs  request.rs  stream.rs  tests.rs  tool_mapping.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-test-client/: README.md
codex-rs/apply-patch/: Cargo.toml
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/core/: Cargo.toml  (+1 more)
codex-rs/slash-dispatch/: Cargo.toml
codex-rs/slash-dispatch/src/: lib.rs
codex-rs/web-search/: BUILD.bazel  Cargo.toml
codex-rs/web-search/src/: commands.rs  commands_tests.rs  config.rs  config_tests.rs  lib.rs  output.rs  output_tests.rs
doc/: anthropic-manual-test-config.md
docs/: config.md  contributing.md  install.md  tui-alternate-screen.md  tui-chat-composer.md  tui-stream-chunking-validation.md
openspec/: config.yaml  project.md
patches/: v8_source_portability.patch
scripts/: stage_npm_packages.py
zhisec/: about.html  blog.html  cases.html  contact.html  index.html  manifest.json  privacy.html  robots.txt  services.html  sitemap.xml  wrangler.toml
(+674 files in other folders)
