[package]
edition.workspace = true
license.workspace = true
name = "codex-web-search"
version.workspace = true

[lib]
name = "codex_web_search"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-api = { workspace = true }
codex-config = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-utils-string = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
